--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.5.0')
     implementation("com.google.firebase:firebase-auth")
 
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
